@@ -4,6 +4,8 @@ Version 1.13  2008-11-24
     free space increase
   * add parameters: sync_interval, sync_start_time and sync_end_time to 
     storage.conf
+  * standard fds closed by daemon_init: 0(stdin), 1(stdout) and 2(stderr)
+  * fix bug: pthread_kill sometimes cause core dump when program terminated
 
 Version 1.12  2008-11-12
   * storage server support multi path (mount point)
